--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -76,6 +76,7 @@ body {
     -o-border-radius: 50px;
     padding: 10px 30px 10px 30px;
     letter-spacing: 0.03em;
+    line-height: 1.6195;
 }
 
 .ml6 .letter {
@@ -232,6 +233,7 @@ button {
     font-family: 'ubuntu_bold';
     letter-spacing: 0.03em;
     font-size: 22px;
+    line-height: 1.6195;
 }
 
 ._yourans, ._correct {
@@ -1714,6 +1716,8 @@ input[type="radio"]:checked~.bullet .line.seven {
     /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     font-family: 'ubuntu_Regular';
     font-size: 20px;
+    letter-spacing: 0.03em;
+    line-height: 1.6195;
 }
 
 @media screen and (max-width: 1440px) {
@@ -1968,6 +1972,16 @@ input[type="radio"]:checked~.bullet .line.seven {
     }
     .resultPage3 h1, .resultPage1 h1, .resultPage2 h1{
         font-size: 2em;
+    }
+    .resultBtns{
+        width: 100%;
+    }
+    .resultBtns button{
+        display: block;
+        width: 100%;
+    }
+    .FireWork img{
+        width: 100%;
     }
 }
 
